--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "bulma": "^0.5.2",
+    "smoothscroll": "^0.4.0",
     "swiper": "^3.4.2",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.6.2",
-    "vue-smooth-scroll": "^1.0.13",
     "vue-sticky": "^3.2.0"
   },
   "devDependencies": {
