--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "swiper": "^3.4.2",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.6.2",
+    "vue-carousel-3d": "^1.0.1",
     "vue-smooth-scroll": "^1.0.13",
-    "vue-sticky": "^3.2.0"
+    "vue-sticky": "^3.2.0",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
